--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <version>4.12.1</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
